--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,24 @@
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+.page-title {
+  font-size: 24px;
+  font-family: "Oswald", sans-serif;
+  font-weight: 500;
+}
+
+.section-title {
+  font-size: 20px;
+  font-weight: 500;
+  font-family: "Oswald", sans-serif;
+}
+
+.club-list .title {
+  font-size: 16px;
+  font-family: "Oswald", sans-serif;
+}
+
 .page-nav .link {
   color: #00bcd4;
 }
@@ -7,17 +28,19 @@
   color: #18ffff;
 }
 
+.page-nav .link:active {
+  color: #212121;
+}
+
 .club-list .link {
   color: #ffc107;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .club-list .link:hover,
 .club-list .link:focus {
   color: #f57f17;
-}
-
-.page-nav .link:active {
-  color: #212121;
 }
 
 .club-list .link:active {
